- Applied Rasmus Toftdahl Olesen's patch fixing NVELOCITY-ISSUE-24
  "Improved enum support"

- Applied Enzo Lombardi's patch fixing NVELOCITY-ISSUE-36
  "LRUMap Collection is not correctly synchronized"

- Fixed the AssemblyResourceLoader so that it allows the loader assembly to be passed as a string
  instead of a List<string> to match the previous behaviour.

- Applied Chris Ortman's patch fixing NVELOCITY-ISSUE-11
  "NVelocity swallows Ambiguous matches"

- Applied Ashish Kulkarni's patch fixing NVELOCITY-ISSUE-28
  "handle divide-by-zero exception when performing arithmetic operations"
- Added ArithmeticExpressionTestCase.

- Applied Matthew Robinson's patch fixing NVELOCITY-ISSUE-33
  "uberinspectimp nullref exception"

- Applied Anders Waglund's patch fixing NVELOCITY-ISSUE-30
  "NVelocity foreach EventCartridge patch"

- Applied Sean Carpenter's patch fixing NVELOCITY-ISSUE-32
  "Bug in StringTokenizer for repeated tokens"

- Applied Simon Cropp's patch fixing NVELOCITY-22
  "remove some unused code"

- Applied Simon Cropp's patch fixing NVELOCITY-19
  "Clean up more code in nvelocity"

- Applied Ashish Kulkarni's patch that adds a new loader. Fixes NVELOCITY-20
  "add AssemblyRelativeResourceLoader for loading resources using with relative template names"

- Applied Simon Cropp's patch fixing NVELOCITY-18
  "Clean up more code in nvelocity"

- Applied Simon Cropp's patch fixing NVELOCITY-17
  "Clean up string concatenation, variable naming and spelling errors"

- Applied patch by Simon Cropp fixing NVELOCITY-16
  "Exception handling in character parsing is not optimal"

- Fixed NVELOCITY-15
  "Fix thread safety issue in ASTMethod.Execute()"

- Added escape support for the dictionary strings

  For example: #{onclick='alert(\'hello\')'}

- Added to_quote and to_squote identifiers special treatment

  usage:
  
  $message.to_quote  returns "message contents"
  $message.to_squote returns 'message contents'
  
  Note that this is not a method invocation.
